--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "selenium-server-standalone-jar": "3.0.1",
     "stylefmt": "^6.0.0",
     "stylelint": "^8.0.0",
+    "svg4everybody": "^2.1.9",
     "worldview-components": "1.3.3"
   }
 }
